--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-to-print": "^3.0.2",
     "socks": "^2.8.3",
     "web-vitals": "^4.2.4"
   },
