--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-to-print": "^3.0.2",
+    "react-window": "^1.8.11",
     "socks": "^2.8.3",
     "web-vitals": "^4.2.4"
   },
