--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@zxing/library": "^0.21.3",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "bwip-js": "^4.5.3",
     "classnames": "^2.5.1",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
+    "react-barcode": "^1.6.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-qr-scanner": "^1.0.0-alpha.11",
