--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "bwip-js": "^4.5.3",
     "classnames": "^2.5.1",
+    "jsbarcode": "^3.11.6",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
@@ -24,7 +25,7 @@
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
-    "react-to-print": "^3.0.2",
+    "react-to-print": "^3.0.5",
     "react-window": "^1.8.11",
     "socks": "^2.8.3",
     "web-vitals": "^4.2.4"
